--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 
 
-    <header><h1>Hello and Welcome to GOGOL site!</h1></header>
+    <header><h1>Hello and Welcome to GOGOL<h6>'s</h6> site!</h1></header>
     
     <textarea  id="textfield">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius iure autem, enim quis facere, hic ratione eaque ipsum maxime, consequuntur, amet. Provident similique quaerat repellat consectetur quasi minus dolor eveniet consequuntur quis pariatur dolorum laudantium earum natus repudiandae fugit debitis assumenda libero, iure enim. Commodi quae laboriosam maxime ullam suscipit.</textarea>
     <!-- <br> -->
