--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
         <h1 style="display: inline; font-size: 45px">Hello and Welcome to GOGOL <h6 style="display: inline;">'s</h6> <h1 style="display: inline;">site!</h1></h1>
     </header>
 
+    <input type="number" name="numInput" placeholder="enter number here...">
+    <br>
     <textarea id="textfield">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius iure autem, enim quis facere, hic ratione eaque ipsum maxime, consequuntur, amet. Provident similique quaerat repellat consectetur quasi minus dolor eveniet consequuntur quis pariatur dolorum laudantium earum natus repudiandae fugit debitis assumenda libero, iure enim. Commodi quae laboriosam maxime ullam suscipit.</textarea>
     <br>
-    <button id="butttton"> test1</button>
+    <button id="butttton"> Delete all words</button>
+    <button id="onBaton"> onBaton</button>
+    
     <button id="mkSpan"> Make Words</button>
     <button id="clearCanvas"> clear Canvas</button>
     <button id="ColorItBtn"> ColorItBtn</button>
     <br>
     <span id="outputSpan"></span>
     <script src="sketch.js" type="text/javascript"></script>
+    <script type="text/javascript" src='jqueryStuff.js'></script>
 </body>
 
 </html>
